[package]
name = "tetris"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]

[dependencies]
rand = "0.3"
lazy_static = "0.2"
hyper = "0.10.5"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
regex = "0.2"
url = "1.4"
sdl2 = {version="0.29", default-features=false, features=["ttf"]}

[dev-dependencies]
quickcheck = "0.3"

[target.asmjs-unknown-emscripten.dependencies]
libc = "0.2.16"
emscripten = {git = "https://github.com/lucklove/emscripten.git"}
