[package]
name = "tetris-server"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]
edition = "2018"

[dependencies]
tetris = { path = "../tetris", version = "0.1.0" }
rocket = { version = "0.5.0-rc", features = ["json"] }
serde_json = "1.0"
dirs = "1.0"
fslock = "0.2.1"

[dev-dependencies]
tempdir = "0.3.7"
