[package]
name = "tetris"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]

[dependencies]
rand = "0.3"
lazy_static = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.4"

[dev-dependencies]
quickcheck = "0.3"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
hyper = "0.10.5"

[target.'cfg(target_os = "emscripten")'.dependencies]
libc = "0.2.16"
