[package]
name = "tetris"
version = "0.1.0"
authors = ["Felix Chapman <aelred717@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.3"
lazy_static = "1.0.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "2.1"

[dev-dependencies]
quickcheck = "0.3"

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
reqwest = {version="0.10", features = ["blocking"]}

[target.'cfg(target_os = "emscripten")'.dependencies]
libc = "0.2.16"
